*Empty MediaWiki Message*

--- a/Catalonia.mw
+++ b/Catalonia.mw
@@ -2,8 +2,8 @@
 {{redirect|Catalunya}}
 {{Autonomous community
 |name = Catalonia
-|full-name =  {{lang|ca|''Catalunya''}} {{ca icon}}<br />{{lang|es|''Cataluña''}} {{es icon}}<br />{{lang|oc|''Catalonha''}} {{oc icon}}<br /> Catalonia
-|coat-of-arms = Escudo_de_Cataluña.svg
+|full-name =  {{lang|ca|''Catalunya''}} {{ca icon}}<br />{{lang|oc|''Catalonha''}} {{oc icon}}<br />{{lang|es|''Cataluña''}} {{es icon}}<br /> Catalonia
+|coat-of-arms = Seal of the Generalitat of Catalonia.svg
 |flag = Flag_of_Catalonia.svg
 |map = E.U-Catalonia.png
 |country = [[Spain]]
@@ -27,7 +27,7 @@
 current: [[August 9]], [[2006]]
 |congress = 47
 |senate = 16
-|president = [[José Montilla|José Montilla Aguilera]] ([[Partit Demòcrata Europeu Català|PDECAT]])
+|president = [[Carles Puigdemont|Carles Puigdemont i Casamajó]] ([[Partit Demòcrata Europeu Català|PDECAT]])
 |president-link = List of Presidents of Catalonia
 |code = CT
 |website = [http://www.gencat.cat/index_eng.htm Generalitat de Catalunya]
