only updated the official website.

--- a/Europa.mw
+++ b/Europa.mw
@@ -424,7 +424,7 @@ Ustan, ding 27 [[European Union member state]] makasmut lang tagana antimo keng 
 * [http://earthobservatory.nasa.gov/Newsroom/NewImages/images.php3?img_id=13266 Europe at Night]{{Dead link|date=February 2008}} at [[NASA Earth Observatory]]
 * [http://www.coe.int/ Council of Europe]
 * [http://europa.eu/ European Union]
-* [http://eeas.europa.eu/delegations/philippines/index_en.htm European Union delegation to the Philippines] {{en icon}}
+* [https://eeas.europa.eu/delegations/philippines_en European Union delegation to the Philippines] {{en icon}}
 * [http://philippines.eunic-online.eu/ EUNIC cluster Philippines] {{en icon}}
 
 {{Europefooter}}
