*Empty MediaWiki Message*

--- a/Paris.mw
+++ b/Paris.mw
@@ -3,13 +3,13 @@
 {{coor title dms|48|52|0|N|2|19|59|E|type:city}}
 
 {{French commune
-|native_name = Ville de Paris
+|native_name = Paris
 |common_name = Paris
 |image = [[File:Tour_eiffel_at_sunrise_from_the_trocadero.jpg|180px]]
 |caption = Paris' [[Eiffel tower]] as seen from the esplanade du [[Trocadéro]].
 |image_flag = Flag of Paris.svg
 |image_flag_size = 85px
-|image_coat_of_arms = Blason_paris_75.svg
+|image_coat_of_arms = Grandes_Armes_de_Paris.svg
 |image_coat_of_arms_size = 120px
 |flag_legend = City flag
 |Coat_of_arms_legend = City coat of arms
@@ -21,9 +21,9 @@
 |lat_long = {{coor dms|48|52|0|N|2|19|59|E|type:city(2144700)_region:FR}}
 |region = [[Île-de-France (région)|Île-de-France]]
 |departement = Paris (75)
-|mayor = [[Bertrand Delanoë]] 
+|mayor = [[Anne Hidalgo]] 
 |party = [[Socialist Party (France)|PS]]
-|mandat = since 2001
+|mandat = since 2014
 |subdivisions_entry = [[Subdivision|<font color=#000000>Subdivisions</font>]]
 |subdivisions = [[Arrondissements of Paris|20 arrondissements]]
 |area = <!-- later use [[1 E8 m²|105.397]]<br /> -->[[1 E7 m²|86.9]] <ref name="area"> Excluding [[Bois de Boulogne]] and [[Bois de Vincennes]]</ref> 
@@ -58,6 +58,10 @@ Ing '''Paris''' metung yang lakanbalen, a [[tungku]] ning [[France]], atiu king 
 * {{wikivoyage}}
 * [http://maps.google.com/maps?q=paris,+france&spn=0.131836,0.176468&t=k&hl=en Google Maps of Paris]
 <!-- links to official and standard-reference sites only please. -->
+
+
+
+[[File:Paris_montage2.jpg|350px]]
 
 {{s-start}}
 {{succession box|
