Replacing Ph_seal_of_pampanga.PNG with [[File:Ph_seal_pampanga.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #4]]: To harmonize the file names of a s

--- a/Kalibudtarang_Luzon.mw
+++ b/Kalibudtarang_Luzon.mw
@@ -41,7 +41,7 @@ Atin yang labing aduang [[Ding Lakanbalen ning Filipinas|lakanbalen]] nung nu la
 |5,284.3
 |314.1
 |-
-|[[File:Ph_seal_of_pampanga.PNG|20px]]
+|[[File:Ph seal pampanga.png|20px]]
 |[[Pampanga]]
 |[[San Fernando Lakanbalen, Pampanga|Lakanbalen San Fernando]]
 |1,882,730
