Replacing Cagayan-seal_ph.png with [[File:Ph_seal_cagayan.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #4]]: To harmonize the file names of a set of

--- a/Cagayan.mw
+++ b/Cagayan.mw
@@ -2,7 +2,7 @@ Ing '''Cagayan''' metung yang [[Ding Lalawigan ning Filipinas|lalawigan]] ning [
 
 {{Infobox Philippine province|
 infoboxtitle=Lalawigan ning Cagayan|
-sealfile=[[Image:Cagayan-seal ph.png|150px]]|
+sealfile=[[Image:Ph seal cagayan.png|150px]]|
 region=[[Saug Cagayan]] (Labuad II)|
 capital=[[Tuguegarao Lakanbalen]]|
 founded=&mdash;|
