--- a/Ares,_A_Coruña.mw
+++ b/Ares,_A_Coruña.mw
@@ -24,7 +24,7 @@ timezone_DST = [[Central European Time|CET]] |
 utc_offset_DST = +2 |
 latitude =  |
 longitude =  |
-website =  |
+website = http://www.concellodeares.gal/ |
 footnotes = |
 }}
 
