--- a/Visakhapatnam.mw
+++ b/Visakhapatnam.mw
@@ -50,7 +50,7 @@ Ing '''Visakhapatnam''' {{audio|Visakhapatnam.ogg|pronunciation}} ([[Telugu]]: à
 
 == Overview ==
 [[File:vb200.jpg|200px|thumbnail|left|Ing lakanbalen ning kalma (''The city of destiny'')]] 
-[[File:vb239.jpg|200px|thumbnail|left|Ing sadsaran ning Vizag a mekua ibat babo]]
+[[File:Vizag Seaport aerial view.jpg|200px|thumbnail|left|Ing sadsaran ning Vizag a mekua ibat babo]]
 
 == Suglung palual ==
 * [http://picasaweb.google.com/nkuppili/VisakhapatnamAssorted Local Pictures of the City]
