--- a/Visakhapatnam.mw
+++ b/Visakhapatnam.mw
@@ -49,7 +49,7 @@
 Ing '''Visakhapatnam''' {{audio|Visakhapatnam.ogg|pronunciation}} ([[Telugu]]: విశాఖపట్టణం) (o kaya, '''Visakhapattanamu''', a pepakuyad at misulat king istilung English: Visakha/Vizag o Vizagapatnam) metung yang lakanbalen/ciudad a makabebe dayatmalat at sadsaran (puerto) a maralas dang ausang “The Jewel of the East Coast” (Ing Iyas ning Aslagang Bebe Dayatmalat). Atiu iti king [[Estadu ampong teritoriu ning India|estadu]] ning [[Andhra Pradesh]], a atiu king [[aslagan]] a bebe dayatmalat ning [[India]], busal da reng talimunduk a [[:en:Eastern Ghats|Eastern Ghats]] at makayarap king [[:en:Bay of Bengal|Bay of Bengal]] king aslagan.
 
 == Overview ==
-[[File:vb200.jpg|200px|thumbnail|left|Ing lakanbalen ning kalma (''The city of destiny'')]] 
+[[File:Visakhapatnam.jpg|200px|thumbnail|left|Ing lakanbalen ning kalma (''The city of destiny'')]] 
 [[File:Vizag Seaport aerial view.jpg|200px|thumbnail|left|Ing sadsaran ning Vizag a mekua ibat babo]]
 
 == Suglung palual ==
