*Empty MediaWiki Message*

--- a/New_Guntur.mw
+++ b/New_Guntur.mw
@@ -1,4 +1,4 @@
-[[Image:Ngntst.jpg|right|thumb|125px|Ing Istasiun ning New Guntur]]
+[[Image:New Guntur railway station.jpg|right|thumb|125px|Ing Istasiun ning New Guntur]]
 
 Ing '''New Guntur''' ing bayung labuad (''region'') ning [[Guntur]], metung a lakanbalen o ciudad king aslagan nang bebe dayatmalat (''east coast'') ning [[India]]. Aniang meragul ya papuntang pangulu o norti ing lakanbalen, mika atlu yang labuad: ing Old Guntur (Matuang Guntur), Guntur ampong New Guntur (Bayung Guntur). Atin yang sariling ''train transit point'' o istasiun tren ing New Guntur, a kayabe king [[Indian Railways]]. 
 
