*Empty MediaWiki Message*

--- a/François_Hollande.mw
+++ b/François_Hollande.mw
@@ -1,8 +1,8 @@
 {{Infobox officeholder
 |name           = François Hollande
 |birth_name=François Gérard Georges Nicolas Hollande
-|image          = François Hollande (Journées de Nantes 2012).jpg
-|caption        = I Hollande king [[Nantes]] (2012)
+|image          = Francois Hollande 2015.jpeg
+|caption        = I Hollande, (2015)
 |office         = [[List of Presidents of the French Republic|Kadwang Pulu't Apat a]] [[Pamuntuk nig Francia]]
 |primeminister  = [[Jean-Marc Ayrault]]
 |term_start     = 15 Mayo 2012
