*Empty MediaWiki Message*

--- a/François_Hollande.mw
+++ b/François_Hollande.mw
@@ -4,7 +4,7 @@
 |image          = Francois Hollande 2015.jpeg
 |caption        = I Hollande, (2015)
 |office         = [[List of Presidents of the French Republic|Kadwang Pulu't Apat a]] [[Pamuntuk nig Francia]]
-|primeminister  = [[Jean-Marc Ayrault]]
+|primeminister  = [[Manuel Valls]]
 |term_start     = 15 Mayo 2012
 |term_end       = 
 |predecessor    = [[Nicolas Sarkozy]]
