--- a/Diosdado_Macapagal_International_Airport.mw
+++ b/Diosdado_Macapagal_International_Airport.mw
@@ -1,7 +1,7 @@
 {{Airport frame}}
 {{Airport title|name=Diosdado Macapagal International Airport}}
 [[File:40px-CIAC Logo.png |40px]]
-{{Airport image|Infobox collage for Clark Int'l Airport.png|}}
+{{Airport image|airport_image=Infobox collage for Clark Int'l Airport.png|}}
 {{Airport infobox|
 IATA=CRK|
 ICAO=RPLC|
