--- a/Ninoy_Aquino_International_Airport.mw
+++ b/Ninoy_Aquino_International_Airport.mw
@@ -34,7 +34,7 @@ runway_surface=Concrete |
 
 == Terminals ==
 === Terminal 1 ===
-[[File:FACADE-AIRSIDE2.jpg|200px|thumb|right|NAIA Terminal 1]]
+[[File:Santo Nino, Parañaque, 1704 Metro Manila, Philippines - panoramio (1).jpg|200px|thumb|right|NAIA Terminal 1]]
 [[File:NAIA Departure.jpg|right|thumb|200px|Danggut 1 Pamaglakong Bulwagan]]
 
 === Terminal 2 "Centennial Terminal" ===
@@ -49,6 +49,7 @@ runway_surface=Concrete |
 
 === Manila Domestic Passenger Terminal ===
 [[File:Domestic-Front.jpg|200px|thumb|right|Ing  Manila Domestic Passenger Danggut]]
+
 == Airlines ==
 Deng makatuking airlines ilang susuyu keng Ninoy Aquino International Airport (Octubri 2006):
 === Terminal 1 ===
