--- a/Ninoy_Aquino_International_Airport.mw
+++ b/Ninoy_Aquino_International_Airport.mw
@@ -35,7 +35,7 @@ runway_surface=Concrete |
 == Terminals ==
 === Terminal 1 ===
 [[File:Santo Nino, Parañaque, 1704 Metro Manila, Philippines - panoramio (1).jpg|200px|thumb|right|NAIA Terminal 1]]
-[[File:NAIA Departure.jpg|right|thumb|200px|Danggut 1 Pamaglakong Bulwagan]]
+[[File:NAIA Airport.jpg|right|thumb|200px|Danggut 1 Pamaglakong Bulwagan]]
 
 === Terminal 2 "Centennial Terminal" ===
 [[File:NAIA2 Interior.JPG|200px|thumb|right|Danggut 2 Interior]]
