/* Terminal 2 "Centennial Terminal" */

--- a/Ninoy_Aquino_International_Airport.mw
+++ b/Ninoy_Aquino_International_Airport.mw
@@ -39,7 +39,7 @@ runway_surface=Concrete |
 
 === Terminal 2 "Centennial Terminal" ===
 [[File:NAIA2 Interior.JPG|200px|thumb|right|Danggut 2 Interior]]
-[[File:Hall of NAIA 2.JPG|200px|thumb|right|Danggut 2 Bulwagan]]
+[[File:Centennialphoto.jpg|200px|thumb|right|Danggut 2 Bulwagan]]
 
 === Terminal 3 ===
 [[File:Naia3.jpg|200px|thumb|right|NAIA Danggut 3]]
