--- a/Ninoy_Aquino_International_Airport.mw
+++ b/Ninoy_Aquino_International_Airport.mw
@@ -42,7 +42,7 @@ runway_surface=Concrete |
 [[File:Centennialphoto.jpg|200px|thumb|right|Danggut 2 Bulwagan]]
 
 === Terminal 3 ===
-[[File:Naia3.jpg|200px|thumb|right|NAIA Danggut 3]]
+[[File:NAIA Terminal 3 2009 MC.jpg|200px|thumb|right|NAIA Danggut 3]]
 [[File:NAIAT3 Apron.jpg|200px|thumb|right|Danggut 3 Apron]]
 [[File:NAIA3A.JPG|200px|thumb|right|Ing gulut ning Danggut 3]]
 [[File:NAIA3 DeptHall.jpg|right|thumb|200px|Danggut 3 Pamalakong Bulawagan]]
