--- a/Ninoy_Aquino_International_Airport.mw
+++ b/Ninoy_Aquino_International_Airport.mw
@@ -45,7 +45,7 @@ runway_surface=Concrete |
 [[File:NAIA Terminal 3 2009 MC.jpg|200px|thumb|right|NAIA Danggut 3]]
 [[File:NAIAT3 Apron.jpg|200px|thumb|right|Danggut 3 Apron]]
 [[File:NAIA3A.JPG|200px|thumb|right|Ing gulut ning Danggut 3]]
-[[File:NAIA3 DeptHall.jpg|right|thumb|200px|Danggut 3 Pamalakong Bulawagan]]
+[[File:NAIA Terminal 3 checkin.jpg|right|thumb|200px|Danggut 3 Pamalakong Bulawagan]]
 
 === Manila Domestic Passenger Terminal ===
 [[File:Domestic-Front.jpg|200px|thumb|right|Ing  Manila Domestic Passenger Danggut]]
