*Empty MediaWiki Message*

--- a/Ninoy_Aquino_International_Airport.mw
+++ b/Ninoy_Aquino_International_Airport.mw
@@ -1,6 +1,6 @@
 {{Airport frame}}
 {{Airport title|name=Ninoy Aquino International Airport}}
-[[File:MIAA_Logo.png]]
+[[File:MIAA logo.png]]
 {{Airport infobox |
 IATA=MNL |
 ICAO=RPLL |
