*Empty MediaWiki Message*

--- a/Alameda,_California.mw
+++ b/Alameda,_California.mw
@@ -1,7 +1,7 @@
 {{Infobox City
  | official_name = Lakanbalen  ning Alameda, California
  | nickname = (The Island City) [[Ing Pulung Lakanbalen]]
- | image_flag = Alameda_city_flag.gif
+ | image_flag = Flag of Alameda, California.png
  | image_seal = Seal of Alameda, California.png
  | image_map = Alameda_in_Alameda_County.png
  | map_caption = Karinan king state ning [[California]] at [[Alameda County, California|Alameda County]]
