--- a/Belmont,_California.mw
+++ b/Belmont,_California.mw
@@ -13,7 +13,7 @@
 |image_caption            = 
 |image_flag               = 
 |flag_size                = 
-|image_seal               = Belmont seal.gif
+|image_seal               = Seal of Belmont, California.png
 |seal_size                = 52px
 |image_shield             = 
 |shield_size              = 
