*Empty MediaWiki Message*

--- a/Philadelphia.mw
+++ b/Philadelphia.mw
@@ -63,7 +63,7 @@
 
 [[File:Large Philadelphia Landsat.jpg|thumb|Ing makuleng litratu ning uangis ning Philadelphia meyakua keng [[NASA]]'s [[Landsat 7]] satellite. Ing [[Delaware Ilug]] mayayakit ya kening kua aini.]]
 
-[[File:Philly Street.jpg|thumb|Metung a dalan king [[Washington Square West, Philadelphia|Washington Square West]] neighborhood.]]
+[[File:Philly Street Commons.jpg|thumb|Metung a dalan king [[Washington Square West, Philadelphia|Washington Square West]] neighborhood.]]
 == Lawen ya rin ==
 * [[Large Cities Climate Leadership Group]]
 
