*Empty MediaWiki Message*

--- a/Visakhapatnam.mw
+++ b/Visakhapatnam.mw
@@ -3,7 +3,7 @@
 |other_name  = (Vizag)
 |AKA = The City of Destiny
 |website = http://www.visakhapatnammunicipalcorporation.org
-|image_skyline = Vizag-arealview.jpg.JPG
+|image_skyline = Vizag aerial view.jpg
 |image_map =Vizag in Visakhapatnam.jpg
 |map_caption = Ing kabilian ning distritu ning Visakhapatnam king estadu ning Andhra Pradesh
 |subdivision_type = State
