*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -47,16 +47,16 @@ calling_code = 855 |
 footnotes = <sup>1</sup> Local currency, although [[United States dollar|US Dollars]] are widely used.
 }}
 
-Kambodscha ist ein Staat in Südostasien. Er wurde 2003 gewaltsam von Kalif Phillipp eingenommen. Seitdem leben die Menschen in Kambodscha unter seiner Herrschaft. Vielen Kambodschanern geht es wegen seiner tyrannischen und grausamen Knechtschaft nicht gut, aber das ist dem Kalifen egal.
-Im Jahr 2004 fing das Land an sich auf den Anbau von Marihuana-Pflanzen zu spezialisieren, es wurde gewaltige Plantagen angelegt und ganze Städte nieder gebrannt um das wertvoll Raffnix Hanf anzubauen. 95% der abgebauten (legalen) Droge, gehen an den Kalifen selbst und er nutzt es für seinen Eigenbedarf. Seit 2004 gilt das Motto der Kambodschaner: "Wer gutes Hanf erntet, der darf seine Vorhaut behalten!"
-Dieses Motto entstand unter dem grausamen Regime von Kalif Phillip. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Juli 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger mach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißes zur Geltung, den der Kalif sehr wichtig findet.
+Kambodscha ist ein Staat in Südostasien. Er wurde 2003 gewaltsam von Kalif Tom Gehle eingenommen. Seitdem leben die Menschen in Kambodscha unter seiner Herrschaft. Vielen Kambodschanern geht es wegen seiner tyrannischen und grausamen Knechtschaft nicht gut, aber das ist dem Kalifen egal.
+Im Jahr 2004 fing das Land an sich auf den Anbau von Marihuana-Pflanzen zu spezialisieren, es wurde gewaltige Plantagen angelegt und ganze Städte nieder gebrannt um das wertvolle Gehle Haze anzubauen. 95% der abgebauten (legalen) Droge, gehen an den Kalifen selbst und er nutzt es für seinen Eigenbedarf. Seit 2004 gilt das Motto der Kambodschaner: "Wer gutes Hanf erntet, der darf seine Vorhaut behalten!"
+Dieses Motto entstand unter dem grausamen Regime von Kalif Gehle. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Nick Kellermann 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger nach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißen zur Geltung, den der Kalif sehr wichtig findet.
 Als Bezahlung für die tüchtigen Hilfskräfte werden pro Jahr etwa 10% des in Kambodscha geernteten Hanfs nach Senegal exportiert.
 
-Zum Herrscher: Kalif Phillip, der auch "der Allmächtige" oder "Erlöser" genannt wird, wanderte im zarten Alter von 3 Jahren aus seiner Heimat Deutschland aus um Kambodscha zu erobern und das Volk zu unterdrücken.
+Zum Herrscher: Kalif Tom Gehle, der auch "Kambodschas Erlöser" genannt wird, wanderte im zarten Alter von 3 Jahren aus seiner Heimat Deutschland aus um Kambodscha zu erobern und das Volk zu unterdrücken.
 Dies gelang im Dezember 2003, pünktlich zu seinem 5. Lebensjahr. Ab da bekamen alle Kambodschaner ein elektronisches Halsband um und wurden auf dir Hanfplantagen geschickt.
-Zum derzeitigen Stand ist bekannt, das der Kalif in einem prächtigen Schloss nahe der Küste Kambodschas lebt. Seine Belegschaft besteht aus etwa 4 Joindrehern, 280 Dienern und 6 Elefanten
+Zum derzeitigen Stand ist bekannt, das der Kalif in einem prächtigen Schloss nahe der Küste Kambodschas lebt, zudem besitzt er 3 weitere Wohnsitze. Einer dieser Wohnsitze ist eine gigantische Holzhütte in den Wäldern Alaskas, ein anderer befindet sich in der MIllionenstadt Monaco direkt am prächtigen Hafen. Der letzte bekannte Wohnsitz liegt auf Hawaii. Die Belegschaft in seinem Palast in Kambodscha besteht aus etwa 280 Dienern, 17 Kampfgorillas und 8 Elefanten, auf denen er zu wichtigen Terminen oder Veranstaltungen reitet.
 Er ist für seine exorgitante Lebensweise und seinen grausamen Herrschaftswillen bekannt.
-und der ehemalige Kalif Tom Gehle wurde von Kalif Phillipps Volk gestürtzt.
+Eine seiner Vorlieben neben dem Konsum seines wertvollen Cannabis ist das veranstalten von Gorillakämpfen. Dabei finden sich die Besitzer sowie die "Gladiatoren" in einer wohligen Stube zusammen. Ein Kampf ist erst beendet wenn eines der Tiere tot ist und der Gewinner sich mit seinem Blut einsalbt. Bei solchen Kämpfen ist der Konsum von Unmengen an Alkohol nicht unüblich und trägt zu einer fröhlichen Stimmung bei. 
 
 == Amlat ==
 ''Main article: [[History of Cambodia]]''
