*Empty MediaWiki Message*

--- a/Senegal.mw
+++ b/Senegal.mw
@@ -65,6 +65,7 @@ Senegal ist ein Staat im Afrikanischen Kontinent. Der Staat wurde im Jahre 2004 
 Zur Person Nick Kellermann II: Großzar Nick Kellermann II wurde als Sohn einer angesehenen Adelsfamilie in Nordrhein-Westfalen geboren. Im Alter von 3 Jahren hatte er alerdings genug von langweiligen Leben als Adelssohn und zog alleine los, um verschiedene Gebiete zu erobern. Er fand schnell Anschluss und war bald Herr einer mächtigen Armee aus Negersklaven. Diese gaben ihm den namen "grabahar zarna". Übersetzt:Großzar.
 
 Seine ihm untergeworfenen Negersklaven in Senegal zwingt er seine hoch potente Hanf sorte Kellermann-Kush anzubauen. Die Armut der dort ansässigen Bevölkerung nimmt weiterhin stark zu, da 98 % des geernteten Hanfs ihm zum Eigenbedarf zustehen. Das interresiert den Großzaren allerdings nicht. Die Penislänge des Zaren wird lediglich durch die seines Vaters,  Konradinius von Allem was ist, dem Herrscher über den Rest des Afrikanischen Kontinents, um etwa das doppelte übertrumpft.
+Nicht zu vergessen ist das Bündnis des Großzaren mit dem Kalifen Kambodschas: Tom Gehle der 1. und Einzige. Eine Legende besagt das dem Bündnis eine heftige Auseinandersetzung hervorging. Bei dieser Auseinandersetzung schwang der Kalif seinen mächtigen Schnidel um den Hals Kellermanns und rang ihn gewaltsam zu Boden. Danach ergab sich der besiegte Großzar und versprach dem Kalifen als Entschädigung jährlich 5000 Negersklaven nach Kambodscha zu senden. Seitdem herrscht Frieden zwischen den beiden Ländern und der über-mega-enorme Tyrann Tom Gehle lässt seine Gnade walten. Heil dem Kalifen du Schlumpf!
 
 
 Dies ist ein als exzellent ausgezeichneter Artikel.
