*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,11 +1,11 @@
 {{featured article}}
 {{Infobox_Country |
 native_name = [[File:Official_name_of_Cambodia.png]]<br />Preăh Réachéanachâkr Kâmpŭchea |
-common_name = Cambodia |
+common_name = Kalif Tom Gehle |
 image_flag = Flag of Cambodia.svg |
 image_coat =Coat_of_arms_of_Cambodia.svg |
 image_map = LocationCambodia.png |
-national_motto = [[File:Kh-Motto.png|170px]]<br />(Khmer: Nation, Religion, King) |
+national_motto = [[File:Kh-Motto.png|170px]]<br />(Khmer: "Wer gutes Hanf erntet, darf seine Vorhaut behalten!") |
 national_anthem = [[Nokoreach]] |
 official_languages = [[Khmer language|Khmer]]; [[French language|French]] at [[English language|English]] keraklan aintindyan da reng megaral |
 capital = [[Phnom Penh]] |latd=11|latm=31|latNS=N|longd=104|longm=49|longEW=E|
