*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,6 +1,6 @@
 {{featured article}}
 {{Infobox_Country |
-native_name = [[File:Official_name_of_Cambodia.png]]<br />Preăh Réachéanachâkr Kâmpŭchea |
+native_name = [[Kalif Tom Gehle]]<br />Preăh Réachéanachâkr Kâmpŭchea |
 common_name = Kalif Tom Gehle |
 image_flag = Flag of Cambodia.svg |
 image_coat =Coat_of_arms_of_Cambodia.svg |
