*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,8 +1,8 @@
-{{featured article}}
-{{Infobox_Country |
+{{Kalif Tom Gehle}}
+{{Kalif Tom Gehle|
 native_name = [[Kalif Tom Gehle]]<br />Preăh Réachéanachâkr Kâmpŭchea |
 common_name = Kalif Tom Gehle |
-image_flag = Flag of Cambodia.svg |
+image_flag =  |
 image_coat =Coat_of_arms_of_Cambodia.svg |
 image_map = LocationCambodia.png |
 national_motto = [[File:Kh-Motto.png|170px]]<br />(Khmer: "Wer gutes Hanf erntet, darf seine Vorhaut behalten!") |
@@ -20,7 +20,7 @@ percent_water = 2.5% |
 population_estimate = 13,363,421 |
 population_estimate_year = July 2004 |
 population_estimate_rank = 65th |
-population_census = 11,437,656|
+population_census = |
 population_census_year = 1998|
 population_density = 74 |
 population_density_rank = 121st |
@@ -47,6 +47,7 @@ calling_code = 855 |
 footnotes = <sup>1</sup> Local currency, although [[United States dollar|US Dollars]] are widely used.
 }}
 
+Kalif Tom Gehle und sein herrliches Reich:
 Kambodscha ist ein Staat in Südostasien. Er wurde 2003 gewaltsam von Kalif Tom Gehle eingenommen. Seitdem leben die Menschen in Kambodscha unter seiner Herrschaft. Vielen Kambodschanern geht es wegen seiner tyrannischen und grausamen Knechtschaft nicht gut, aber das ist dem Kalifen egal.
 Im Jahr 2004 fing das Land an sich auf den Anbau von Marihuana-Pflanzen zu spezialisieren, es wurde gewaltige Plantagen angelegt und ganze Städte nieder gebrannt um das wertvolle Gehle Haze anzubauen. 95% der abgebauten (legalen) Droge, gehen an den Kalifen selbst und er nutzt es für seinen Eigenbedarf. Seit 2004 gilt das Motto der Kambodschaner: "Wer gutes Hanf erntet, der darf seine Vorhaut behalten!"
 Dieses Motto entstand unter dem grausamen Regime von Kalif Gehle. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Nick Kellermann 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger nach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißen zur Geltung, den der Kalif sehr wichtig findet.
@@ -58,108 +59,6 @@ Zum derzeitigen Stand ist bekannt, das der Kalif in einem prächtigen Schloss na
 Er ist für seine exorgitante Lebensweise und seinen grausamen Herrschaftswillen bekannt.
 Eine seiner Vorlieben neben dem Konsum seines wertvollen Cannabis ist das veranstalten von Gorillakämpfen. Dabei finden sich die Besitzer sowie die "Gladiatoren" in einer wohligen Stube zusammen. Ein Kampf ist erst beendet wenn eines der Tiere tot ist und der Gewinner sich mit seinem Blut einsalbt. Bei solchen Kämpfen ist der Konsum von Unmengen an Alkohol nicht unüblich und trägt zu einer fröhlichen Stimmung bei. 
 
-== Amlat ==
-''Main article: [[History of Cambodia]]''
+Ehrt den Kalifen und huldigt ihm bis in den Tod, seine Anwesenheit auf Erden ist ein wahrhaftiges Geschenk Gottes! Somit ist es die Pflicht aller gesunden Menschen die bei Verstand sind ihm ihr Heil zu zusprechen.
 
-
-=== Deng Minunang Bangsa: Funan and Chenla ===
-
-=== Angkor and the Khmer Empire ===
-== Administratibung pangadake ==
-{{main|Ding Lalawigan ning Cambodia|District at Pangatabas ning Cambodia}}
-[[File:Cb-map.png|right|thumbnail|378px|Mapa ning Cambodia]]
-
-Ing Cambodia makadake ya kareng 20 [[lalawigan]] (''[[khet]]'', pangmetung at pangmarakalan) at 4 a [[balen]] (''[[krong]]'', pangmetung at pangmarakalan). Makadake la pa bilang [[distritu]] (''[[srok]]''), [[commune]] (''[[khum]]''), [[barangay]](''[[phum]]''), at [[pulu]] (''koh''). 
-{{columns
-|width=270px
-|col1 =
-'''Balen (''Krong'')''':
-* [[Phnom Penh]]
-* [[Sihanoukville]] (Kampong Som)
-* [[Pailin]]
-* [[Kep, Cambodia|Kep]]
-'''Lalawigan (''Khett'')''':
-* [[Banteay Meanchey]]
-* [[Battambang Lalawigan|Battambang]]
-* [[Kampong Cham Lalawigan|Kampong Cham]]
-* [[Kampong Chhnang Lalawigan|Kampong Chhnang]]
-* [[Kampong Speu Lalawigan|Kampong Speu]]
-* [[Kampong Thom Lalawigan|Kampong Thom]]
-|col2 =
-* [[Kampot Lalawigan|Kampot]]
-* [[Kandal Lalawigan|Kandal]]
-* [[Koh Kong Lalawigan|Koh Kong]]
-* [[Kratié Lalawigan|Kratié]]
-* [[Mondulkiri]]
-* [[Oddar Meancheay]]
-* [[Pursat Lalawigan|Pursat]]
-* [[Preah Vihear Lalawigan|Preah Vihear]]
-* [[Prey Veng Lalawigan|Prey Veng]]
-* [[Ratanakiri]]
-* [[Siem Reap Lalawigan|Siem Reap]]
-* [[Stung Treng Lalawigan|Stung Treng]]
-* [[Svay Rieng Lalawigan|Svay Rieng]]
-* [[Takéo Lalawigan|Takéo]]
-|col3 =
-'''Pulu (''Koh'')''':
-* [[Koh Kong (island)|Koh Kong]]
-* Koh Polaway
-* [[Koh Rong]]
-* [[Koh Rong Samlon]]
-* [[Koh Sess]]
-* [[Koh Tang]]
-* Koh Thass
-* [[Koh Thonsáy]]
-* Koh Traolach
-* Koh Treas
-}}
-
-== Pamagsiasat ==
-
-== Demographics ==
-
-
-== Kalinangan ==
-''Main article: [[Culture of Cambodia]]''
-[[File:Srokkmae.png|thumbnail|150px|right|"Cambodia" in [[Khmer alphabet|Khmer writing]]]]
-
-
-== Lawen ya rin ==
-''Main article: [[List of Cambodia-related topics]]''
-{{Topics related to Cambodia}}
-
-== Pilawen ==
-* [http://www.business-in-asia.com/airports_cambodia.html Business in Asia] report on airports. Accessed [[13 November]] [[2005]].
-* [http://www.parish-without-borders.net/cditt/cambodia/khculture.htm Cambodian Culture website] Accessed [[December 11]] [[2004]]
-* [http://www.classbrain.com/art_cr/publish/cambodia_economy.shtml Cambodian Economy Information] Accessed [[January 19]] [[2005]].
-* [[CIA World Factbook]] U.S. Department of State website.
-* [http://www.ifes.org/eguide/resultsum/cambodia_par03.htm IFES] Summary of 2003 legislative election results. Accessed [[January 27]] [[2005]].
-* Kerlogue, Fiona. ''Arts of Southeast Asia''. Thames and Hudson 2004. ISBN 050020381.
-* [http://www.mot.gov.kh/statistic.asp Ministry of Tourism] statistics on tourism. Accessed [[January 27]] [[2005]].
-* [http://www.ngoforum.org.kh/index.htm NGO Forum on Cambodia] report on 2003 legislative elections. Accessed [[January 27]] [[2005]].
-* [http://www.dxing.info/articles/cambodia.dx Radio Broadcasting in Cambodia] Accessed [[January 23]] [[2005]].
-* [http://www.tourismcambodia.com Tourism Cambodia] Accessed [[December 11]] [[2004]].
-
-== Suglung Palwal ==
-{{portal}}
-{{sisterlinks|Cambodia}}
-
-=== Official ===
-* [http://www.norodomsihamoni.net King of Cambodia, Norodom Sihamoni] Official Website of King Norodom Sihamoni
-* [http://www.norodomsihanouk.info King of Cambodia, Norodom Sihanouk] Official Website of former King Norodom Sihanouk
-* [http://www.cambodia.gov.kh/unisql1/egov/english/home.frame.html Cambodia.gov.kh] Official Royal Government of Cambodia Website (English Version) ([http://www.cambodia.gov.kh/unisql2/egov/khmer/home.view.html Cambodia.gov.kh]) 
-
-
-{{Cambodia ties}}
-{{Cambodia}}
-{{Mauling Aslagang Asia }}
-{{Asia}}
-{{Bangsang geo-stub}}
-
-[[Category:Asia]]
-[[Category:Mauling Aslagang Asia]]
-[[Category:Filipinas]]
-[[Category:Deng Bangsa]]
-[[Category:ASEAN (Deng Bangsa)]]
-[[Category:Cambodia| ]]
-[[Category:Monarchies]]
+Heil dem Kalifen ihr mikrigen Schlümpfe!!!
