*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -62,3 +62,4 @@ Eine seiner Vorlieben neben dem Konsum seines wertvollen Cannabis ist das verans
 Ehrt den Kalifen und huldigt ihm bis in den Tod, seine Anwesenheit auf Erden ist ein wahrhaftiges Geschenk Gottes! Somit ist es die Pflicht aller gesunden Menschen die bei Verstand sind ihm ihr Heil zu zusprechen.
 
 Heil dem Kalifen ihr mikrigen Schlümpfe!!!
+[[File:Antalya Museum - Weary Hercules.jpg|alt=diese Skulptur steht auf dem Marktplatz des Kambodschanischen Kingdoms |thumb|487x487px|[[Senegal|Kalif]] Tom Gehle in seiner vollen Pracht]]
