--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,3 +1,4 @@
+[[File:Chiron instructs young Achilles - Ancient Roman fresco.jpg|thumb|[[Senegal|Kalif]] Tom Gehle verwandelte sich Dank seines Cannabis zur Hälfte in ein Pferd um den Großzaren Nick Kellermann 2 auf der Weg der Wahrheit zurück zu führen!]]
 {{Kalif Tom Gehle}}
 {{Kalif Tom Gehle|
 native_name = [[Kalif Tom Gehle]]<br />Preăh Réachéanachâkr Kâmpŭchea |
