--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,4 +1,5 @@
 [[File:Chiron instructs young Achilles - Ancient Roman fresco.jpg|thumb|[[Senegal|Kalif]] Tom Gehle verwandelte sich Dank seines Cannabis zur Hälfte in ein Pferd um den Großzaren Nick Kellermann 2 auf der Weg der Wahrheit zurück zu führen!]]
+[[File:Cannabis indica Selkem.jpg|thumb|Eine mächtige Pflanze des äußerst wertvollen Gehle Haze des Kalifen ]]
 {{Kalif Tom Gehle}}
 {{Kalif Tom Gehle|
 native_name = [[Kalif Tom Gehle]]<br />Preăh Réachéanachâkr Kâmpŭchea |
