*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,6 +1,6 @@
-[[File:Chiron instructs young Achilles - Ancient Roman fresco.jpg|thumb|[[Senegal|Kalif]] Tom Gehle verwandelte sich Dank seines Cannabis zur Hälfte in ein Pferd um den Großzaren Nick Kellermann 2 auf der Weg der Wahrheit zurück zu führen!]]
+[[File:Chiron instructs young Achilles - Ancient Roman fresco.jpg|thumb|[[Senegal|Kalif]] Tom Gehle verwandelte sich Dank seines Cannabis zur Hälfte in ein Pferd um den Großzaren Nick Kellermann 2 auf den Weg der Wahrheit zurück zu führen!]]
 [[File:Cannabis indica Selkem.jpg|thumb|Eine mächtige Pflanze des äußerst wertvollen Gehle Haze des Kalifen ]]
-[[File:King Kong vs Tyrannosaurus.jpg|thumb|547x547px|Die Nummer 1 der Kampfgorillas weltweit: Big Joe
+[[File:King Kong vs Tyrannosaurus.jpg|thumb|547x547px|Die Nummer 1 der Kampfgorillas weltweit: Big Joe.
 Er befindet sich zur Zeit im Palast des Kalifen und lässt sich von Senegalesischen Dirnen die Stange polieren. Sein Ernährungsplan besteht ausschließlich aus Kokain und Blutwurst. 
 ]]
 {{Kalif Tom Gehle}}
