--- a/Visakhapatnam.mw
+++ b/Visakhapatnam.mw
@@ -4,7 +4,7 @@
 |AKA = The City of Destiny
 |website = http://www.visakhapatnammunicipalcorporation.org
 |image_skyline = Vizag aerial view.jpg
-|image_map =Vizag in Visakhapatnam.jpg
+|image_map = Map of the Visakhapatnam district.jpg
 |map_caption = Ing kabilian ning distritu ning Visakhapatnam king estadu ning Andhra Pradesh
 |subdivision_type = State
 |subdivision_type1 = District
