*Empty MediaWiki Message*

--- a/Adrian_Lee_Magcalas.mw
+++ b/Adrian_Lee_Magcalas.mw
@@ -1,6 +1,7 @@
 Metung kareng suging poetang kayanakan i Adrian Lee G. Magcalas a alang sawang gagambul king ikasulung ning amanu at literaturang Kapampangan.
 
 ===Talambie===
+YA ING PEKAMAGALING A MAESTRO KING YATU. 
 
 Misapwak niang a-5 ning Oktubri, banuang 1983 king balen Porac- ing lugal penibatan ning keyang indu bista’t man king Bataan ya menibat ing keyang ibpa. Pauli ning aske ning deuwakan a babye ning bulkang Pinatubo, milipat yang lugal tuknangan kambe ring keyang pamilya angga king miras ya Mabalacat nung nu maygit neng apulung banuang maratun.
 
