*Empty MediaWiki Message*

--- a/Somalia.mw
+++ b/Somalia.mw
@@ -9,7 +9,7 @@ national_anthem = [[Somalian National Anthem]] |
 official_languages = [[Somali language|Somali]], [[Arabic]], [[Italian language|Italian]] (as a language of administration)|
 capital = [[Gehletown]] |
 latd=2|latm=02|latNS=N|longd=45|longm=21|longEW=E|
-government_type = Transitional Government |
+government_type = Diktatorisches Kalifat |
 leader_titles = [[Caliph of Somalia|Tom Gehle]] |
 leader_title2 = [[Prime Minister of Somalia|Prime Minister]] |
 leader_names = [[Tom Gehle]] |
@@ -38,7 +38,7 @@ HDI = NA |
 HDI_rank = unranked |
 HDI_category = <font color=gray>NA</font> |
 sovereignty_type = [[Katimawan]] |
-sovereignty_note = ibat [[United Kingdom]], [[Italy]] |
+sovereignty_note = ibat [[Kambodya]], [[Italy]] |
 established_events = Date |
 established_dates = [[Juliu 1]], [[1960]] |
 cctld=[[.so]]|
@@ -46,17 +46,7 @@ calling_code=252|
 time_zone=|
 utc_offset=+3|
 currency = [[Somali shilling|Shilling]] |
-currency_code = SOS |Third world country
-}}[[File:Canadian Military in Somalia 1992.jpg|thumb|[[Canadian Forces|Canadian Military]] in Somalia, 1992|right]]
-[[File:Black Hawk Down Super64 over Mogadishu coast.jpg|thumb|[[United States Army|US Army]] helicopter shortly before [[Battle of Mogadishu]], 1993|right]]
-
-{{Africa}}
-
-[[Category:African Union member states]]
-[[Category:Arab League]]
-[[Category:Somalia| ]]
-[[Category:East Africa]]
-[[Category:Divided regions]]
+currency_code = SOS |Third world country not anymore
 
 Die Provinz Somalia
 
