--- a/Somalia.mw
+++ b/Somalia.mw
@@ -1,8 +1,8 @@
+Die Provinz Somalia
+[[File:Black people erg very good of dancing Gambia.jpg|thumb|384x384px|Somalische Einwohner feiern die tyrannische Herrschaft ihres Kalifen und sind dankbar für seine Knechtschaft.]]
 <gallery>
 File:Der zweite Kalif und zwei Missionare für West Afrika.jpg|Kalif Tom Gehle (mitte) mit dem Großzaren Nick Kellermann 2 (rechts), ihrem Geschäftspartner aus Ägypten (links) und zwei der königlichen Schuhputzer des Kalifen. 
-</gallery>Die Provinz Somalia
-
-Somalia ist ein ehemaliger Staat Ostafrikas, es liegt am sogenannten Horn von Afrika und hat direkte Anbindungen zum Indischen  Ozean. Der Staat ist aber nun kein Staat mehr, sondern eine frisch erworbene Provinz des Kalifen von Kambodscha: Tom Gehle. Vor kurzer Zeit packte ihn das Fernweh und er entschloss sich dazu ein weiteres Entwicklungsland zu erobern. Zudem nervte ihn die Piraterie in Somalia und er nabm kurzer Hand etwa 700 Piraten in Küstennähe fest und ließ ihnen die Kopfhaut abschneiden. Diese Skulps schickte er als Willkommensgeschenk ein Neuankommling in Afrika zu sein, an seinen guten Verbündeten Großzar Nick Kellermann 2. Nachdem der Kalif die lästigen Piraten beseitigt hatte begann er mit der Unterjochung des Volkes. Den ehemaligen Presidenten ließ er von Elefanten überrennen und spendete seine übrig gebliebenen Organe an die Armen. Seit diesem Tag an sehen die Somalianesen ihn als Heiland an und beglücken ihn mit zahlreichen Gaben und Segenswünschen. Allerdings dient Somalia dem Kalifen nur als Winterprovinz um sich zurückzulehnen und vom pikanten Alltag zu entspannen, rasch wurde ihm aber auch klar dass er nun mit einer gewaltigen Armee von Negersklaven einem extremen Machtaufstieg zu teil wurde. Seit der Besetzung des Kalifen konzentriert sich das Land Somalia ausschließlich auf den Export von illegalem Organhandel und wird daher in den nächsten Jahren zu einem der reichsten Länder der Welt werden. Trotzdem geht es den meisten Bürgern Somalia nicht gut wegen des Wassermangel und der fehlenden Arzneimittel. Dennoch ist es dem Kalifen gelungen das Volk mit einem seiner Geschenke zu besänftigen und die Probleme zu legitimieren. Er schenkt ihnen 1000000000 Liter seines feinsten Bieres, welches mit dem Zusatz von Hanfölen gebraut wird. Seither leben die Bürger Somalias feierlich zusammen und dienen ihrem Herrscher ohne jede Beschwerde. 
+</gallery>Somalia ist ein ehemaliger Staat Ostafrikas, es liegt am sogenannten Horn von Afrika und hat direkte Anbindungen zum Indischen  Ozean. Der Staat ist aber nun kein Staat mehr, sondern eine frisch erworbene Provinz des Kalifen von Kambodscha: Tom Gehle. Vor kurzer Zeit packte ihn das Fernweh und er entschloss sich dazu ein weiteres Entwicklungsland zu erobern. Zudem nervte ihn die Piraterie in Somalia und er nabm kurzer Hand etwa 700 Piraten in Küstennähe fest und ließ ihnen die Kopfhaut abschneiden. Diese Skulps schickte er als Willkommensgeschenk ein Neuankommling in Afrika zu sein, an seinen guten Verbündeten Großzar Nick Kellermann 2. Nachdem der Kalif die lästigen Piraten beseitigt hatte begann er mit der Unterjochung des Volkes. Den ehemaligen Presidenten ließ er von Elefanten überrennen und spendete seine übrig gebliebenen Organe an die Armen. Seit diesem Tag an sehen die Somalianesen ihn als Heiland an und beglücken ihn mit zahlreichen Gaben und Segenswünschen. Allerdings dient Somalia dem Kalifen nur als Winterprovinz um sich zurückzulehnen und vom pikanten Alltag zu entspannen, rasch wurde ihm aber auch klar dass er nun mit einer gewaltigen Armee von Negersklaven einem extremen Machtaufstieg zu teil wurde. Seit der Besetzung des Kalifen konzentriert sich das Land Somalia ausschließlich auf den Export von illegalem Organhandel und wird daher in den nächsten Jahren zu einem der reichsten Länder der Welt werden. Trotzdem geht es den meisten Bürgern Somalia nicht gut wegen des Wassermangel und der fehlenden Arzneimittel. Dennoch ist es dem Kalifen gelungen das Volk mit einem seiner Geschenke zu besänftigen und die Probleme zu legitimieren. Er schenkt ihnen 1000000000 Liter seines feinsten Bieres, welches mit dem Zusatz von Hanfölen gebraut wird. Seither leben die Bürger Somalias feierlich zusammen und dienen ihrem Herrscher ohne jede Beschwerde. 
 Dies wird nicht der letzte Staat sein der dem mächtigen Kalifen Tom Gehle zum Opfer fiel, also sollte sämtlicher Schabernack unterlassen werden und stets nach dem Wunsch des Kalifen gehandelt werden!
 
 Verheiligt werde dein Name Kalif und verherrlicht werde dein Segen spendendes Kalifat!
