*Empty MediaWiki Message*

--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -1,5 +1,5 @@
 [[File:Michael Jackson in Vegas cropped-2.jpg|thumb|right|220px|Michael Jackson (2003)]]
-'''Michael Joseph Jackson''' ([[Agostu 29|August 29]], [[1958]] – [[Juniu 25|Juni 25]], [[2009]]) war einst ein sehr guter Freund des Kalifen Tom Gehle. Sie tanzten oft zusammen und feierten exzessive Partynächte mit anderen gefragten Prominenten. Sie teilten viele Gemeinsamkeiten und feierten oft gemeinsam ihre Geburtstage. Doch eines Tages erschien Jackson zu spät zu einem vereinbarten Treffen. Dies verärgerte den Kalifen und er fühlte sich in seiner Würde beleidigt, sodass er sich eine Giftspritze bringen ließ und Michael damit mitten ins Herz stach. Er schob diese Tat auf den Leibarzt Jacksons und konnte sich somit aus der Verantwortung ziehen. Somit bewies der Kalif erneut seine enorme Macht.
+'''Michael Joseph Jackson''' ([[Agostu 29|August 29]], [[1958]] – [[Juniu 25|Juni 25]], [[2009]]) war einst ein sehr guter Freund des Kalifen Tom Gehle. Sie tanzten oft zusammen und feierten exzessive Partynächte mit anderen gefragten Prominenten. Sie teilten viele Gemeinsamkeiten und feierten oft gemeinsam ihre Geburtstage. Doch eines Tages erschien Jackson zu spät zu einem vereinbarten Treffen. Dies verärgerte den Kalifen und er fühlte sich in seiner Würde beleidigt, sodass er sich eine Giftspritze bringen ließ und Michael damit mitten ins Herz stach. Er schob diese Tat auf den Leibarzt Jacksons und konnte sich somit aus der Verantwortung ziehen. Somit bewies der Kalif erneut seine enorme Macht. Auch war der Kalif dafür bekannt, Michael Jackson in seiner Freizeit oral zu befriedigen. In einem Interview, gab der kalif zu wahnsinnig süchtig danach gewesen zu sein, den wohltuenden Samen von Michael Jackson zu kosten.
 
 == External links ==
 {{sisterlinks|Michael Jackson}}
