*Empty MediaWiki Message*

--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -1,7 +1,9 @@
 [[File:Michael Jackson in Vegas cropped-2.jpg|thumb|right|220px|Michael Jackson (2003)]]
-'''Michael Joseph Jackson''' ([[Agostu 29|August 29]], [[1958]] – [[Juniu 25|Juni 25]], [[2009]]) war einst ein sehr guter Freund des Kalifen Tom Gehle. Sie tanzten oft zusammen und feierten exzessive Partynächte mit anderen gefragten Prominenten. Sie teilten viele Gemeinsamkeiten und feierten oft gemeinsam ihre Geburtstage. Doch eines Tages erschien Jackson zu spät zu einem vereinbarten Treffen. Dies verärgerte den Kalifen und er fühlte sich in seiner Würde beleidigt, sodass er sich eine Giftspritze bringen ließ und Michael damit mitten ins Herz stach. Er schob diese Tat auf den Leibarzt Jacksons und konnte sich somit aus der Verantwortung ziehen. Somit bewies der Kalif erneut seine enorme Macht. Auch war der Kalif dafür bekannt, Michael Jackson in seiner Freizeit oral zu befriedigen. In einem Interview, gab der kalif zu wahnsinnig süchtig danach gewesen zu sein, den wohltuenden Samen von Michael Jackson zu kosten.Auch hat der kalif sich von ihn fingern lassen, seine fvcking scheisse gegessen und ihm so lange einen gelutscht bis das eiter aus michaels penis tropfte. Das eiter aus jacksons penis, nutzt der kalif noch heute als salbe gegen pickel, die häufig aus seiner hässlichen fresse auftauchen
+'''Michael Joseph Jackson''' ([[Agostu 29|August 29]], [[1958]] – [[Juniu 25|Juni 25]], [[2009]]) war einst ein sehr guter Freund des Kalifen Tom Gehle. Sie tanzten oft zusammen und feierten exzessive Partynächte mit anderen gefragten Prominenten. Sie teilten viele Gemeinsamkeiten und feierten oft gemeinsam ihre Geburtstage. Doch eines Tages erschien Jackson zu spät zu einem vereinbarten Treffen. Dies verärgerte den Kalifen und er fühlte sich in seiner Würde beleidigt, sodass er sich eine Giftspritze bringen ließ und Michael damit mitten ins Herz stach. Er schob diese Tat auf den Leibarzt Jacksons und konnte sich somit aus der Verantwortung ziehen. Somit bewies der Kalif erneut seine enorme Macht. 
+Als Strafe für den Versuch den Kalifen zu beleidigen, nahm er Phil Rameil in seine Gewalt und ließ ihn den Leichnam von Michael Jackson von Kopf bis Fuß ablecken. Anschließend schnitte er ihm die Kniescheiben raus und schlug ihm die Arme ab um ihn danach mit einem alkohosüchtigen Schimpansen zu kämpfen.
+Lass dir das ein Lehre sein du Spast! 
 
-== External links ==
+tauchen== External links ==
 {{sisterlinks|Michael Jackson}}
 [[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern.]]
 * {{imdb name|id=0001391|name=Michael Jackson}}
