--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -5,7 +5,7 @@ Lass dir das ein Lehre sein du Spast! Kaliph tom gehle fand den kampf zwischen p
 
 tauchen== External links ==
 {{sisterlinks|Michael Jackson}}
-[[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern.]]
+[[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern. Seine tägliche Spermadosis muss sich der Kalif jetzt wo anders herholen:/]]
 * {{imdb name|id=0001391|name=Michael Jackson}}
 
 {{Persondata
