Added Tom Gehle

--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -3,7 +3,9 @@
 Als Strafe für den Versuch den Kalifen zu beleidigen, nahm er Phil Rameil in seine Gewalt und ließ ihn den Leichnam von Michael Jackson von Kopf bis Fuß ablecken. Anschließend schnitte er ihm die Kniescheiben raus und schlug ihm die Arme ab um ihn danach mit einem alkohosüchtigen Schimpansen zu kämpfen.
 Lass dir das ein Lehre sein du Spast! Kaliph tom gehle fand den kampf zwischen phil rameil und dem alkoholsüchtigen schimpansen so geil, dass er seinen finger in seine schleimige, eklige rosette einführte und dabei masturbierte. Er ist wahrheitlich eine schwule sau die affen geil findet und vergewaltigt. Aber spricht ihm trotzdem euer heil aus oder er fisted euch zu tode.
 
-tauchen== External links ==
+Unser Kalif Tom Gehle:
+
+[[Http://www.directupload.net/file/d/4606/ny98uilt jpg|Quelle]]
 {{sisterlinks|Michael Jackson}}
 [[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern. Seine tägliche Spermadosis muss sich der Kalif jetzt wo anders herholen:/]]
 * {{imdb name|id=0001391|name=Michael Jackson}}
