*Empty MediaWiki Message*

--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -4,6 +4,7 @@ Als Strafe für den Versuch den Kalifen zu beleidigen, nahm er Phil Rameil in se
 Lass dir das ein Lehre sein du Spast! Kaliph tom gehle fand den kampf zwischen phil rameil und dem alkoholsüchtigen schimpansen so geil, dass er seinen finger in seine schleimige, eklige rosette einführte und dabei masturbierte. Er ist wahrheitlich eine schwule sau die affen geil findet und vergewaltigt. Aber spricht ihm trotzdem euer heil aus oder er fisted euch zu tode.
 TOM IST DOOF NENENENENEEEEEEE
 Unser Kalif Tom Gehle:
+Jedoch bekam Kalif philipp seine Gliedmaßen wieder, da er unglaublich mächtig ist.
 
 [[Http://www.directupload.net/file/d/4606/ny98uilt jpg|Quelle]]
 {{sisterlinks|Michael Jackson}}
