*Empty MediaWiki Message*

--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -5,7 +5,7 @@ Als Strafe für den Versuch den Kalifen zu beleidigen, nahm er Tom Gehle in sein
 
 Unser Kalif Phillipp
 
-[[Http://www.directupload.net/file/d/4606/ny98uilt jpg|Quelle]]
+[[Http://www.directupload.net/file/d/4606/ny98uilt_jpg|Quelle]]
 {{sisterlinks|Michael Jackson}}
 [[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern. Seine tägliche Spermadosis muss sich der Kalif jetzt wo anders herholen:/]]
 * {{imdb name|id=0001391|name=Michael Jackson}}
