--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -3,9 +3,9 @@
 Als Strafe für den Versuch den Kalifen zu beleidigen, nahm er Tom Gehle in seine Gewalt und ließ ihn den Leichnam von Michael Jackson von Kopf bis Fuß ablecken. Anschließend schnitte er ihm die Kniescheiben raus und schlug ihm die Arme ab um ihn danach mit einem alkohosüchtigen Schimpansen zu kämpfen.
  Aber spricht ihm trotzdem euer heil aus oder er fisted euch zu tode.
 
-Unser Kalif Phillipp
+Unser Kalif Tom Gehle
 
-[[Http://www.directupload.net/file/d/4606/ny98uilt_jpg|Quelle]]
+[[Http://www.directupload.net/file/d/4606/ny98uilt_jpg Quelle]]
 {{sisterlinks|Michael Jackson}}
 [[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern. Seine tägliche Spermadosis muss sich der Kalif jetzt wo anders herholen:/]]
 * {{imdb name|id=0001391|name=Michael Jackson}}
