*Empty MediaWiki Message*

--- a/Ángeles.mw
+++ b/Ángeles.mw
@@ -106,7 +106,7 @@ Ing '''Lakanbalen ning Angeles''' metung yang primeru klasing  [[Ding Lakanbalen
 
 Agpang keng [[2000]] sensus, atin yang bilang a populasyun a  263,971 a katau king 55,769 pamibalebale.
 
-== YAAAAAASSSSSSSS ==
+== Historia ==
 
 Keng marakal-dakal a banua, ing Lungsud Angeles pikabaluan ya bilang "Culiat", pelagyu karing dakal a kukulate tanaman keting lugal iniang i Don Angel Pantaleon de Miranda at ing keyang asawang Donya Rosalia de Jesus pegimpisan deng ginubat ing kakewan at esikan deng pale ampon atbu ketang Mil Sieti Sientus Nobenta'y Seis (1796). Ing Culiat menatili yang barrio ning balen San Fernando anggang atlumpulu't-atlung (33) banua. Yapin keng pamanimuna nang Don Angel at king pamagpursigui ning keyang manuyang a Dr. Mariano Henson, nung makananung ing barrio meguing yang saparadung balen iniang Deciembre 8, 1829. Iti mialilan ya lagyung Angeles bilang parangal kang Don Angel, ing keyang pundador, at ding Los Santos Custudios, ding keyang patulunang patrun.
 
